--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <script language="javascript" type="text/javascript" src="Game.js"></script>
     <script language="javascript" type="text/javascript" src="GridCell.js"></script>
+    <script language="javascript" type="text/javascript" src="Shape.js"></script>
+    <script language="javascript" type="text/javascript" src="ShapesStructure.js"></script>
 
 </head>
 
